# Stellaris_Overmind

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CREDITS.md  Dockerfile  LICENSE  README.md  SECURITY.md  ai_commands.txt  config.example.toml  directive_1.json  directive_10.json  directive_2.json  directive_20.json  directive_3.json  directive_30.json  directive_5.json  docker-compose.yml  harness.config.json  package-lock.json  package.json  pyproject.toml
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md  dependabot.yml
docs/: EXECUTOR_SPEC.md  EXPORTER_SPEC.md  META_4.3.4.md  PERSONALITY_SYSTEM.md  PROJECT_OVERVIEW.md  RULESET_SPEC.md
engine/: __main__.py  bridge.py  clausewitz_parser.py  config.py  console.py  decision_engine.py  game_loop.py  hybrid_provider.py  llm_provider.py  main.py  mcp_client.py  meta_loader.py  metrics.py  multi_agent.py  personality_shards.py  prompt_cache.py  qwen_provider.py  recorder.py  ruleset_generator.py  save_reader.py  scorer.py  setup_wizard.py  strategic_knowledge.py  strategic_planner.py  validator.py
mod/: README.md  stellaris_overmind.mod
scripts/: audit_knowledge.py  auto_execute.py  collect_teacher.py  debug_paths.py  debug_paths2.py  inspect_details.py  inspect_p1.py  inspect_raw.py  inspect_save.py  inspect_save2.py  inspect_starbases.py  scaffold_meta.py  score_method.py  setup.ps1  test_e2e.py  upload_to_foundry.py
stellaris_overmind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_bridge.py  test_clausewitz_parser.py  (+15 more)
(+72 files in other folders)
