[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engine*", "training*"]

[project]
name = "stellaris-overmind"
version = "0.1.0"
description = "LLM-driven AI overhaul for Stellaris 4.3.4"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []  # core engine uses stdlib only

[project.optional-dependencies]
training = [
    "transformers>=4.52",
    "peft>=0.13",
    "trl>=0.12",
    "datasets>=3.0",
    "accelerate>=1.0",
    "bitsandbytes>=0.44",
]
console = [
    "rich>=13.0",
]
tracking = [
    "wandb>=0.19",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
all = [
    "stellaris-overmind[training,console,tracking]",
]

[project.scripts]
overmind = "engine.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["transformers.*", "peft.*", "trl.*", "datasets.*", "wandb.*", "auto_gptq.*", "awq.*", "unsloth.*", "rich.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
